--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,5 +4,7 @@
 
 body {
     font-family: Ubuntu;
-    background:#f1f5f9;
+    background: rgb(236, 250, 255);
+    /* background:#f1f5f9; */
   }
+
