--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,11 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 body {
-    font-family: Ubuntu;
-    background: rgb(236, 250, 255);
+    font-family: 'poppins';
+    /* background: rgb(236, 250, 255); */
     /* background:#f1f5f9; */
+    background-image: url('/background.png'); background-size:cover;
   }
 
